# fastapi-demo

./: main.py  product.db  pyproject.toml  requirement.txt
product/: database.py  main.py  model.py  schema.py
product/router/: login.py  product.py  seller.py
